# cpp-modules-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: foo.cxx  main.cpp  math.cpp  math.ixx
